--- a/src/libft/Makefile
+++ b/src/libft/Makefile
@@ -1,36 +1,23 @@
 CC = cc
 FLAGS = -Wall -Wextra -Werror
 NAME = libft.a
-HEADER = libft.h
-SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
-	   ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
-	   ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c \
-	   ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c \
-	   ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c \
-	   ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
-	   ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
-BSRCS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c \
-		ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c \
-		ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c
-OFILES = $(SRCS:.c=.o)
-BOFILES = $(BSRCS:.c=.o)
+SRCS = $(shell find . -type f -name "*.c")
+OBJS = $(SRCS:.c=.o)
 
-$(NAME) : $(OFILES)
+$(NAME): $(OBJS)
 
-all : $(NAME)
+all: $(NAME)
 
 %.o: %.c
 	$(CC) -c $(FLAGS) $< -o $@
 	ar rcs $(NAME) $@
 
 clean:
-	rm -rf $(OFILES) $(BOFILES)
+	rm -rf $(OBJS)
 
 fclean:	clean
 	rm -rf $(NAME)
 
 re:	fclean all
 
-bonus: $(BOFILES)
-
-.PHONY:	all bonus clean re fclean
+.PHONY:	all clean re fclean
