--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/push_swap",
-      "args": ["2147483647  50 42 0  52 -5 2147483647 -2147483648"],
+      "args": ["1s 2147483641 \"10 51 57 50 42\" 0 52"],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
       "environment": [],
