--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/push_swap",
-      "args": ["0 1 2 3 -5"], 
+      "args": ["0 1 6 4 2 3"],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
       "environment": [],
