--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/push_swap",
-      "args": ["0 1 6 4 2 3"],
+      "args": ["2", "4", "0", "1"],
+     // "args": ["8","3","4","6","5","2","0","7","9","1"],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
       "environment": [],
