--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,10 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/push_swap",
-      "args": ["2", "4", "0", "1"],
-     // "args": ["8","3","4","6","5","2","0","7","9","1"],
+      // "args": ["2", "0", "1"],
+    //  "args": ["8","3","4","6","5","2","0","7","9","1"],
+    //  "args": ["1","9","7","0","2","5","6","4","3","8"],
+    "args": ["10", "5", "7", "6", "65", "14", "20", "78","96", "215"],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
       "environment": [],
