fix: multi insert order search

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,50 @@
       "request": "launch",
       "program": "${workspaceFolder}/push_swap",
       // "args": ["5", "7", "11", "9", "0", "8"],
-      "args": ["8", "3", "4", "6", "5", "2", "0", "7", "9", "1"],
+      // "args": ["8", "3", "4", "6", "5", "2", "0", "7", "9", "1"],
+      // "args": [
+      //   "-34",
+      //   "571",
+      //   "903",
+      //   "202",
+      //   "-476",
+      //   "192",
+      //   "811",
+      //   "78",
+      //   "-194",
+      //   "-408",
+      //   "-352",
+      //   "764",
+      //   "-444",
+      //   "706",
+      //   "808",
+      //   "816",
+      //   "395",
+      //   "-486",
+      //   "-274",
+      //   "982"
+      // ],
+      "args": [
+        "8",
+        "3",
+        "4",
+        "6",
+        "5",
+        "2",
+        "0",
+        "7",
+        "9",
+        "1",
+        "-4",
+        "-1",
+        "67",
+        "45",
+        "51",
+        "54",
+        "-5",
+        "56",
+        "987"
+      ],
       //  "args": ["1","9","7","0","2","5","6","4","3","8"],
       // "args": ["10", "5", "7", "6", "65", "14", "20", "78","96", "215"],
       "stopAtEntry": false,
