feat: bonus with hanane

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "(gdb) Launch",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/push_swap",
+      "program": "${workspaceFolder}/checker",
       // "args": ["5", "7", "11", "9", "0", "8"],
       // "args": ["8", "3", "4", "6", "5", "2", "0", "7", "9", "1"],
       // "args": [
