--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
       "name": "(gdb) Launch",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/checker",
+      "program": "${workspaceFolder}/push_swap",
+      "args": ["1", "2", "4", "3"],
       // "args": ["5", "7", "11", "9", "0", "8"],
       // "args": ["8", "3", "4", "6", "5", "2", "0", "7", "9", "1"],
       // "args": [
@@ -57,85 +58,85 @@
       //   "52",
       //   "875"
       // ],
-      "args": [
-        "44185",
-        "-9517",
-        "17022",
-        "21994",
-        "-46816",
-        "11282",
-        "-49041",
-        "17991",
-        "7556",
-        "12088",
-        "26317",
-        "4406",
-        "15273",
-        "-47157",
-        "34944",
-        "-50095",
-        "-35762",
-        "-31345",
-        "34436",
-        "-34697",
-        "-46868",
-        "23362",
-        "-7144",
-        "-18033",
-        "-54003",
-        "48901",
-        "-43450",
-        "-36726",
-        "-45784",
-        "-41141",
-        "-20525",
-        "18952",
-        "-14288",
-        "-26077",
-        "-29973",
-        "41017",
-        "-18411",
-        "-51249",
-        "-10848",
-        "-12399",
-        "-20833",
-        "29965",
-        "9840",
-        "-13328",
-        "38753",
-        "-7775",
-        "25833",
-        "25150",
-        "16557",
-        "40095",
-        "1913",
-        "30695",
-        "-13595",
-        "5357",
-        "-7796",
-        "-2969",
-        "-6349",
-        "-9219",
-        "12794",
-        "-37898",
-        "36496",
-        "-2565",
-        "-46999",
-        "-45844",
-        "-16816",
-        "-37379",
-        "19515",
-        "39125",
-        "51",
-        "-34107",
-        "25908",
-        "49614",
-        "11053",
-        "-15378",
-        "19454",
-        "31755",
-        "3519"
-      ],
+      // "args": [
+      //   "44185",
+      //   "-9517",
+      //   "17022",
+      //   "21994",
+      //   "-46816",
+      //   "11282",
+      //   "-49041",
+      //   "17991",
+      //   "7556",
+      //   "12088",
+      //   "26317",
+      //   "4406",
+      //   "15273",
+      //   "-47157",
+      //   "34944",
+      //   "-50095",
+      //   "-35762",
+      //   "-31345",
+      //   "34436",
+      //   "-34697",
+      //   "-46868",
+      //   "23362",
+      //   "-7144",
+      //   "-18033",
+      //   "-54003",
+      //   "48901",
+      //   "-43450",
+      //   "-36726",
+      //   "-45784",
+      //   "-41141",
+      //   "-20525",
+      //   "18952",
+      //   "-14288",
+      //   "-26077",
+      //   "-29973",
+      //   "41017",
+      //   "-18411",
+      //   "-51249",
+      //   "-10848",
+      //   "-12399",
+      //   "-20833",
+      //   "29965",
+      //   "9840",
+      //   "-13328",
+      //   "38753",
+      //   "-7775",
+      //   "25833",
+      //   "25150",
+      //   "16557",
+      //   "40095",
+      //   "1913",
+      //   "30695",
+      //   "-13595",
+      //   "5357",
+      //   "-7796",
+      //   "-2969",
+      //   "-6349",
+      //   "-9219",
+      //   "12794",
+      //   "-37898",
+      //   "36496",
+      //   "-2565",
+      //   "-46999",
+      //   "-45844",
+      //   "-16816",
+      //   "-37379",
+      //   "19515",
+      //   "39125",
+      //   "51",
+      //   "-34107",
+      //   "25908",
+      //   "49614",
+      //   "11053",
+      //   "-15378",
+      //   "19454",
+      //   "31755",
+      //   "3519"
+      // ],
       //  "args": ["1","9","7","0","2","5","6","4","3","8"],
       // "args": ["10", "5", "7", "6", "65", "14", "20", "78","96", "215"],
       "stopAtEntry": false,
